Fix spacing around title of "How to Cite" [PUB-49]

--- a/frontend/scss/pages/_p-issuearticle-show.scss
+++ b/frontend/scss/pages/_p-issuearticle-show.scss
@@ -55,6 +55,12 @@
     font-family: $serif-font--loaded;
   }
 
+  &.s-sans-serif-loaded .o-blocks--bibliographic>p,
+  &.s-sans-serif-loaded .o-blocks--bibliographic>ol:not([class*=o-]):not([class*=m-]),
+  &.s-sans-serif-loaded .o-blocks--bibliographic>ul:not([class*=o-]):not([class*=m-]) {
+    font-family: $sans-serif-font--loaded;
+  }
+
   .o-article {
     padding-bottom: 0;
   }
@@ -231,5 +237,10 @@ Styling related specifically to digital publications
 
   .o-blocks.o-blocks--with-sidebar .o-gallery::before {
     left: 1px;
+  }
+
+  .o-blocks--bibliographic .f-secondary {
+    padding-top: 8px;
+    margin-bottom: -8px;
   }
 }
